Passage du projet sous docker compose, adaptation du code/débogage